--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Countdown to December 5, 2025</title>
+  <title>CONTADOR PARA O SORTEIO DA RIFA</title>
 </head>
 <body>
   <h1>Time Remaining</h1>
