--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>CONTADOR PARA O SORTEIO DA RIFA</title>
 </head>
 <body>
-  <h1>Time Remaining</h1>
+  <h1>CONTADOR PARA O SORTEIO DA RIFA</h1>
   <div id="countdown"></div>
 
   <script>
