--- a/index.html
+++ b/index.html
@@ -2,6 +2,28 @@
 <html>
 <head>
   <title>CONTADOR PARA O SORTEIO DA RIFA</title>
+  <style>
+    body {
+      font-family: Comic Sans MS, cursive;
+      background-color: #e7a2cf;
+      color: #42424e;
+    }
+    h1 {
+      font-size: 36px;
+      text-align: center;
+      text-decoration: underline;
+      color: #17012f;
+    }
+    #countdown {
+      font-size: 24px;
+      text-align: center;
+      border: 3px solid #570a6c;
+      padding: 10px;
+      margin: 20px auto;
+      background-color: #FFFFE0;
+      box-shadow: 5px 5px 10px #808080;
+    }
+  </style>
 </head>
 <body>
   <h1>CONTADOR PARA O SORTEIO DA RIFA</h1>
